--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,8 @@ AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(ac_config.h)
 
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+
 AC_MSG_NOTICE([libconfig - made with pride in California])
 sleep 3
 
