Make an automake testsuite
Add the existing tests and the examples. The testsuite is then run with
"make check".

--- a/examples/c/Makefile.am
+++ b/examples/c/Makefile.am
@@ -1,11 +1,8 @@
 
-noinst_PROGRAMS = example1 example2 example3
+check_PROGRAMS = example1 example2 example3
+noinst_PROGRAMS=$(check_PROGRAMS)
 
-example1_SOURCES = example1.c
-
-example2_SOURCES = example2.c
-
-example3_SOURCES = example3.c
+TESTS = $(check_PROGRAMS)
 
 AM_CPPFLAGS = -I $(top_srcdir)/lib
 
