--- a/examples/c++/Makefile.am
+++ b/examples/c++/Makefile.am
@@ -1,13 +1,10 @@
 
-noinst_PROGRAMS = example1 example2 example3 example4
+check_PROGRAMS = example1 example2 example3 example4
+AM_DEFAULT_SOURCE_EXT = .cpp
 
-example1_SOURCES = example1.cpp
-
-example2_SOURCES = example2.cpp
-
-example3_SOURCES = example3.cpp
-
-example4_SOURCES = example4.cpp
+noinst_PROGRAMS=$(check_PROGRAMS)
+TESTS = $(check_PROGRAMS)
+XFAIL_TESTS = example4
 
 AM_CPPFLAGS = -I $(top_srcdir)/lib
 
