Added directory reading functions.
Currently only has complete Win32 implementation. POSIX implementation
is incomplete.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -33,7 +33,7 @@ libconfig_la_LDFLAGS = $(VERINFO) -no-undefined
 libconfig___la_LDFLAGS = $(VERINFO) -no-undefined
 
 libsrc = libconfig.c scanner.l grammar.y parsectx.h wincompat.h \
-	scanctx.c scanctx.h strbuf.c strbuf.h
+	scanctx.c scanctx.h strbuf.c strbuf.h dir.c dir.h
 libinc = libconfig.h
 
 libsrc_cpp =  $(libsrc) libconfigcpp.c++
