--- a/lib/libconfig++.vcxproj.filters
+++ b/lib/libconfig++.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="strbuf.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="win32\scandir.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ac_config.h">
