--- a/lib/libconfig.vcxproj
+++ b/lib/libconfig.vcxproj
@@ -105,19 +105,34 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(ProjectName).$(Configuration)\</IntDir>
+    <IncludePath>win32;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugStatic|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(ProjectName).$(Configuration)\</IntDir>
+    <IncludePath>win32;$(IncludePath)</IncludePath>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>win32;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(ProjectName).$(Configuration)\</IntDir>
+    <IncludePath>win32;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseStatic|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(ProjectName).$(Configuration)\</IntDir>
+    <IncludePath>win32;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseStatic|x64'">
+    <IncludePath>win32;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>win32;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugStatic|x64'">
+    <IncludePath>win32;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -232,6 +247,7 @@
     <ClCompile Include="scanctx.c" />
     <ClCompile Include="scanner.c" />
     <ClCompile Include="strbuf.c" />
+    <ClCompile Include="win32\scandir.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ac_config.h" />
@@ -241,6 +257,7 @@
     <ClInclude Include="private.h" />
     <ClInclude Include="scanctx.h" />
     <ClInclude Include="scanner.h" />
+    <ClInclude Include="win32\dirent.h" />
     <ClInclude Include="win32\stdint.h" />
     <ClInclude Include="wincompat.h" />
   </ItemGroup>
