fixed bug in handling of TypeLists

--- a/contrib/chained/examples/example.cfg
+++ b/contrib/chained/examples/example.cfg
@@ -14,7 +14,10 @@ inventory =
             { title  = "Snow Crash";
               author = "Neal Stephenson";
               price  = 9.99;
-              qty    = 8; }
+              qty    = 8; },
+            { title  = "Das Kapital";
+              price  = 0.0;
+              qty    = 100000; }
           );
 
   movies = ( { title = "Brazil";
