added check against type mismatch default value or limits with requested result type of any setting

--- a/contrib/chained/examples/example.cfg
+++ b/contrib/chained/examples/example.cfg
@@ -48,3 +48,5 @@ hours =
   sat = { open =  9; close = 20; };
   sun = { open = 11; close = 16; };
 };
+
+lost_bag = ( 1234.5678, "Napkin", [1, 2, 3] );
