--- a/contrib/libconfig-ruby/Rakefile
+++ b/contrib/libconfig-ruby/Rakefile
@@ -3,7 +3,7 @@ require 'rubygems/package_task'
 
 spec = Gem::Specification.new do |s| 
   s.name = "rconfig"
-  s.version = "1.0"
+  s.version = "1.0.1"
   s.author = "Peter Zotov"
   s.email = "whitequark@whitequark.ru"
   s.platform = Gem::Platform::RUBY
@@ -12,6 +12,6 @@ spec = Gem::Specification.new do |s|
   s.extensions = 'ext/extconf.rb'
 end
  
-Rake::GemPackageTask.new(spec) do |pkg| 
+Gem::PackageTask.new(spec) do |pkg|
 end
  
