Reimplemented @include-wildcard support to remove platform-specific code; hook functions are now used so the app can supply its own logic.
Various other cleanup.

--- a/examples/c/Makefile.am
+++ b/examples/c/Makefile.am
@@ -1,5 +1,5 @@
 
-check_PROGRAMS = example1 example2 example3
+check_PROGRAMS = example1 example2 example3 example4
 noinst_PROGRAMS=$(check_PROGRAMS)
 
 TESTS = $(check_PROGRAMS)
@@ -9,5 +9,7 @@ AM_CPPFLAGS = -I $(top_srcdir)/lib
 LDADD = $(top_builddir)/lib/libconfig.la
 
 EXTRA_DIST = \
-	example.cfg \
+  example.cfg \
+  example4.cfg \
+  book*.cfg \
 	*.vcproj
