--- a/examples/c/Makefile.in
+++ b/examples/c/Makefile.in
@@ -530,8 +530,8 @@ LDADD = $(top_builddir)/lib/libconfig.la
 EXTRA_DIST = \
   example.cfg \
   example4.cfg \
-  book*.cfg \
-	*.vcproj
+  cfg_includes/*.cfg \
+  *.vcproj
 
 all: all-am
 
