Misc code cleanup.

--- a/examples/c/cfg_includes/book3.cfg
+++ b/examples/c/cfg_includes/book3.cfg
@@ -1,4 +1,5 @@
-{ title  = "Farnham's Freehold";
+{
+  title  = "Farnham's Freehold";
   author = "Robert A. Heinlein";
   price  = 4.99;
   qty    = 4;
