Added Visual Studio 2017 solution/project files.

--- a/lib/libconfig++.vcxproj.filters
+++ b/lib/libconfig++.vcxproj.filters
@@ -29,6 +29,12 @@
     <ClCompile Include="strbuf.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="strvec.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="util.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ac_config.h">
@@ -38,9 +44,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="libconfig.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="libconfig.hh">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="parsectx.h">
@@ -55,8 +58,22 @@
     <ClInclude Include="win32\stdint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="strbuf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="strvec.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="wincompat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="libconfig.hh">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
