--- a/lib/libconfig.vcxproj.filters
+++ b/lib/libconfig.vcxproj.filters
@@ -26,6 +26,12 @@
     <ClCompile Include="strbuf.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="strvec.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="util.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ac_config.h">
@@ -50,6 +56,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32\stdint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="strbuf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="strvec.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="wincompat.h">
