--- a/tinytest/Makefile.am
+++ b/tinytest/Makefile.am
@@ -3,4 +3,4 @@ noinst_LIBRARIES = libtinytest.a
 
 libtinytest_a_SOURCES = tinytest.c tinytest.h
 
-EXTRA_DIST = tinytest.vcproj
+EXTRA_DIST = tinytest.vcproj tinytest.vcxproj
