--- a/lib/libconfig.vcproj
+++ b/lib/libconfig.vcproj
@@ -185,6 +185,10 @@
 				RelativePath=".\util.c"
 				>
 			</File>
+			<File
+				RelativePath=".\wincompat.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
