Added new test files to dist

--- a/examples/c/Makefile.am
+++ b/examples/c/Makefile.am
@@ -12,5 +12,6 @@ EXTRA_DIST = \
 	example.cfg \
 	example4.cfg \
 	cfg_includes/*.cfg \
+	cfg_includes/cfg_subincludes/*.cfg \
 	*.vcproj \
 	*.vcxproj
