#96 : fix lib/CMakeLists.txt, add wincompat.c.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -17,7 +17,8 @@ set(libsrc
     scanner.c
     strbuf.c
     strvec.c
-    util.c)
+    util.c
+	wincompat.c)
 	
 set(libinc_cpp
     libconfig.h++
