--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,14 @@
 add_executable(libconfig_tests
-	tests.c )
-	
+    tests.c
+)
+
 target_link_libraries(libconfig_tests
-	libconfig
-	libtinytest )
+    libconfig
+    libtinytest
+)
 
-target_include_directories(libconfig_tests
-	PRIVATE ${CMAKE_SOURCE_DIR}/lib
-		${CMAKE_SOURCE_DIR}/tinytest )
-
-add_test(NAME libconfig_tests COMMAND libconfig_tests)
+add_test(
+    NAME libconfig_tests
+    COMMAND libconfig_tests
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests
+)
