--- a/tinytest/CMakeLists.txt
+++ b/tinytest/CMakeLists.txt
@@ -1,12 +1,17 @@
 add_library(libtinytest STATIC
-	tinytest.h
-	tinytest.c)
+    tinytest.c tinytest.h)
+
+target_include_directories(libtinytest
+    PUBLIC
+        $<INSTALL_INTERFACE:.>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+)
 
 if(CMAKE_HOST_WIN32)
-	if(MSVC)	
-		set_target_properties(libtinytest
-			PROPERTIES
-				COMPILE_FLAGS "/wd4996"
-			)
-	endif()
+    if(MSVC)
+        set_target_properties(libtinytest
+            PROPERTIES
+                COMPILE_FLAGS "/wd4996"
+            )
+    endif()
 endif()
