--- a/.github/workflows/conan.yaml
+++ b/.github/workflows/conan.yaml
@@ -13,4 +13,7 @@ jobs:
           sudo pip3 install conan
       # build project
       - name: build conan package
-        run: conan create .
+        run: |
+          conan profile new default --detect --force # Generates default profile detecting GCC and sets old ABI
+          conan profile update settings.compiler.libcxx=libstdc++11 default  # Sets libcxx to C++11 ABI
+          conan create .
