add --disable-tests configure option

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = lib tinytest tests
+SUBDIRS = lib
 
 if BUILDDOC
 SUBDIRS += doc
@@ -9,6 +9,10 @@ endif
 
 if BUILDEXAMPLES
 SUBDIRS += examples
+endif
+
+if BUILDTESTS
+SUBDIRS += tinytest tests
 endif
 
 .PHONY: dist-rpm
