cmake: build pkgconfig files

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -148,3 +148,21 @@ install(FILES
     "${CMAKE_CURRENT_BINARY_DIR}/libconfigConfigVersion.cmake"
     DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/libconfig"
     )
+
+if (UNIX)
+    configure_file(
+        ${CMAKE_CURRENT_SOURCE_DIR}/libconfig.pc.cmake.in
+        ${CMAKE_CURRENT_BINARY_DIR}/libconfig.pc @ONLY
+        )
+
+    configure_file(
+        ${CMAKE_CURRENT_SOURCE_DIR}/libconfig++.pc.cmake.in
+        ${CMAKE_CURRENT_BINARY_DIR}/libconfig++.pc @ONLY
+        )
+
+    install(FILES
+        ${CMAKE_CURRENT_BINARY_DIR}/libconfig.pc
+        ${CMAKE_CURRENT_BINARY_DIR}/libconfig++.pc
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
+        )
+endif (UNIX)
