--- a/tests/testdata/nesting.cfg
+++ b/tests/testdata/nesting.cfg
@@ -2,5 +2,12 @@
 foo = (
   { string: "orange", number: 3, flag: false, array: [7, 13] },
   { string: "blue", number: 11, flag: true, array: [1, 2, 3, 4] },
-  { string: "red", number: 7, flag: false, array: [77, 88] }
+  { string: "red", number: 7, flag: false, array: [77, 88] },
+  {
+     nested: {
+       deeper: {
+          color: "blue"
+       }
+     }
+  }
 )
