Added missing file to distribution

--- a/examples/c/Makefile.am
+++ b/examples/c/Makefile.am
@@ -14,7 +14,7 @@ example2_SOURCES = example2.c
 
 example3_SOURCES = example3.c
 
-example4_SOURCES = example4.c pathbuf.c
+example4_SOURCES = example4.c pathbuf.c pathbuf.h
 
 EXTRA_DIST = \
 	example.cfg \
