--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,10 @@ jobs:
           architecture: 'x64'
       # install dependencies
       - name: CMake build
-        run: cmake -B build && cmake --build build
+        run: |
+          cmake -B build
+          cmake --build build
+          ctest -V --test-dir build -C Debug
 
       - name: autoconf build
         if: ${{ matrix.os == 'ubuntu-latest' }}
@@ -21,3 +24,4 @@ jobs:
           ./configure
           make clean
           make
+          make test
